@@ -1,3 +1,7 @@
+2005-09-11  Don Allingham  <don@gramps-project.org>
+	* src/NameDisplay: include nickname if available
+	* src/plugins/ScratchPad.py: Handle null handle
+
 2005-09-10  Don Allingham  <don@gramps-project.org>
 	* src/ImageSelect.py: fix adding a new image that is actually
 	already in the database.
